solc_mutator_ossfuzz_seed_corpus/test_sol/test_3d214f8ee8fb414c6dbda0a8de378f5dff4506637fa22ef31104899086d0d180_1e21c7bebdf255e565d1fead3c4fabadf1db5ca4_sol.sol
==== Source:  ====

==== Source: su0.sol ====
library L0 {
  function f0() internal   
  {
    bytes memory l0 = ((false ? true : true) ? bytes("bdccb67435f3d62a5b3400000000000000000000000000000000000000000000000000000000000000") : bytes("ffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffff"));
    assert(false);
  }
}
library L1 {
  event ev0();
  function f1(address i0) public    returns(bytes memory o0)
  {
  }
  function f2(function (bool, bool, function (int8, address payable, int16) external  ) external   returns (bytes20, bool) i0) private    returns(int160 o0,function () external   returns (int240, bytes29) o1)
  {
    string memory l0 = string("205d62351d75c18ab75b2104524c0b889eeaee0cce9f6a937d0c40839b82d515");
    bytes memory l1 = bytes("272c72e7f648112cc7c0a6000000000000000000000000000000000000000000000000000000000000");
  }
}
pragma solidity >= 0.0.0;
contract C0 {
  bytes29   s0;
  address payable immutable  s1 = payable(address(this));
  bytes29   s2 = bytes29(0x0000000000000000000000000000000000000000000000000000000000);
  constructor(bytes29 i0) payable  {
    s0 |= (~(bytes29((true ? bytes10(bytes11(bytes18(0xffffffffffffffffffffffffffffffffffff))) : bytes10(0x00000000000000000000)))));
    unchecked {
      address payable  l0 = s1;
      address payable  l1 = l0;
      assert(l1 == s1);
      (bool l2, bytes memory l3) = payable(this).call{value: 0}("");
      payable(this).transfer(0);
      {
        bytes29  l4 = s0;
        bytes29  l5 = l4;
        assert(l5 == s0);
        for(        uint224 l6 = (((~((((uint224(13751013314681063326123352275914034079152555741745315180654676278945) & uint224(0)) + uint224(14571362670311164168453880780904002269676342788324553836721003944696)) + uint224(19523164804627131839128228915584491871561126045206197093688006455162)))) % uint224(26959946667150639794667015087019630673637144422540572481103610249215)) + uint224(26959946667150639794667015087019630673637144422540572481103610249215));
;
address(this))
        {
        }
        bytes29  l7 = s2;
        bytes29  l8 = l7;
        assert(l8 == s2);
        address payable  l9 = s1;
        address payable  l10 = l9;
        assert(l10 == s1);
        bytes29  l11 = s2;
        bytes29  l12 = l11;
        assert(l12 == s2);
        s2 ^= bytes29(0x0000000000000000000000000000000000000000000000000000000000);
        bytes29  l13 = s2;
        bytes29  l14 = l13;
        assert(l14 == s2);
      }
    }
  }
  using L0 for *;
  receive() external virtual  payable
  {
    address payable  l0 = s1;
    address payable  l1 = l0;
    assert(l1 == s1);
    (s0, s2) = (bytes29(0xc2f6359a07047cc21940df7a8806b8fbb13ef389a288d861dbcef8c824), bytes29(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffff));
    assert(s0 == bytes29(0xc2f6359a07047cc21940df7a8806b8fbb13ef389a288d861dbcef8c824));
    assert(s2 == bytes29(0xffffffffffffffffffffffffffffffffffffffffffffffffffffffffff));
    while (true)
    {
      revert(string("000000000000000000"));
    }
  }
  using L0 for *;
}
// ----
// Warning 2072: (su0.sol:49-64): Unused local variable.
// Warning 5667: (su0.sol:404-515): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:536-545): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 5667: (su0.sol:546-597): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:607-623): Unused local variable.
// Warning 2072: (su0.sol:706-721): Unused local variable.
// Warning 5667: (su0.sol:1039-1049): Unused function parameter. Remove or comment out the variable name to silence this warning.
// Warning 2072: (su0.sol:1307-1314): Unused local variable.
// Warning 2072: (su0.sol:1316-1331): Unused local variable.
// Warning 2072: (su0.sol:1508-1518): Unused local variable.
// Warning 2018: (su0.sol:15-290): Function state mutability can be restricted to pure
// Warning 2018: (su0.sol:392-820): Function state mutability can be restricted to pure
// CodeGenerationError 1284: Some immutables were read from but never assigned, possibly because of optimization.
